--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -65,6 +65,40 @@ main {
 /* 
 * SquarePaint
 */
+
+.home {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding: 50px;
+}
+
+.home h3 {
+  font-size: 18px;
+  margin-bottom: 25px;
+  color: var(--color-bleen);
+}
+
+.home section {
+  width: 100%;
+  line-height: 20px;
+}
+
+.home section:not(:last-of-type) {
+  margin-bottom: 25px;
+}
+
+.home ul {
+  list-style-type: square;
+  margin-left: 30px;
+}
+
+/* 
+* SquarePaint
+*/
 header {
   display: flex;
   justify-content: center;
@@ -124,7 +158,7 @@ h2 {
   width: 100%;
 }
 
-h3 {
+.films h3 {
   font-size: 18px;
   padding: 10px;
 }
