--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -4,16 +4,20 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="styles/reset.css")
-    link(rel="stylesheet", href="styles/style.css")
+    link(rel="stylesheet", href="/static/styles/reset.css")
+    link(rel="stylesheet", href="/static/styles/style.css")
     script(src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js")
+    script(src="/static/scripts/authentication.js")
     title= title || 'NodeProject'
+    script.
+      let socket = io('http://localhost:3000')
+      authenticate()
   body
-    nav
+    nav#app-nav
       a.nav-link(href="/")
         h1 NodeProject
       a.nav-link(href="/paint" class=`${title === 'SquarePaint' ? 'active' : null}`) SquarePaint
-      a.nav-link(href="/films" class=`${title === 'CinemArchive' ? 'active' : null}`) CinemArchive
+      a.nav-link(href="/cinema" class=`${title === 'CinemArchive' ? 'active' : null}`) CinemArchive
 
     main
       block layout-content
