--- a/views/paint.pug
+++ b/views/paint.pug
@@ -20,7 +20,6 @@ block layout-content
 
   script.
     let paint = !{mosaic}
-    let socket = io('http://localhost:3000')
 
     // Function to get specific tile of the mosaic
     const getTile = (x, y) => { 
@@ -77,7 +76,8 @@ block layout-content
       fetch('/api/tiles', {
         method: 'POST',
         headers: {
-          'Content-Type': 'application/json'
+          'Content-Type': 'application/json',
+          ...loadAuthorizationHeader()
         },
         body: JSON.stringify({ color, x, y })
       }).then(res => {
@@ -92,7 +92,8 @@ block layout-content
       fetch(`/api/tiles/${id}`, {
         method: 'PUT',
         headers: {
-          'Content-Type': 'application/json'
+          'Content-Type': 'application/json',
+          ...loadAuthorizationHeader()
         },
         body: JSON.stringify({ color })
       }).then(res => {
